9 changes by Nuxt Studio

--- a/docs/content/docs/1.getting-started/3.configuration.md
+++ b/docs/content/docs/1.getting-started/3.configuration.md
@@ -143,11 +143,13 @@ type Highlight = false | object
 
 Nuxt Content uses [Shiki](https://github.com/shikijs/shiki) to provide syntax highlighting for [`ProsePre`](/docs/components/prose#prosepre) and [`ProseCode`](/docs/components/prose#prosecode).
 
-|         |                                              |                                                                                                                  |
-| ------- | -------------------------------------------- | ---------------------------------------------------------------------------------------------------------------- |
-| Option  | Type                                         | Description                                                                                                      |
-| `theme` | `ShikiTheme` or `Record<string, ShikiTheme>` | The [color theme](https://github.com/shikijs/shiki/blob/main/docs/themes.md) to use.                             |
-| `langs` | `ShikiLang[]`                                | The [loaded languages](https://github.com/shikijs/shiki/blob/main/docs/languages.md) available for highlighting. |
+|        |      |                                                                                                                  |
+| ------ | ---- | ---------------------------------------------------------------------------------------------------------------- |
+|        |      |                                                                                                                  |
+|        |      |                                                                                                                  |
+| Option | Type | Description                                                                                                      |
+|        |      | The [color theme](https://github.com/shikijs/shiki/blob/main/docs/themes.md) to use.                             |
+|        |      | The [loaded languages](https://github.com/shikijs/shiki/blob/main/docs/languages.md) available for highlighting. |
 
 - `highlight.theme`
 
@@ -358,13 +360,6 @@ Value:
 
 - `false`: will disable link generation.
 - `true`: will enable link generation for all headings.
-- `object`: will customize the link generation.
-  - `h1: boolean`: Whether render anchor link for `H1` tags or not.
-  - `h2: boolean`: Whether render anchor link for `H2` tags or not.
-  - `h3: boolean`: Whether render anchor link for `H3` tags or not.
-  - `h4: boolean`: Whether render anchor link for `H4` tags or not.
-  - `h5: boolean`: Whether render anchor link for `H5` tags or not.
-  - `h6: boolean`: Whether render anchor link for `H6` tags or not.
 
 ### `alias`
 
