--- a/docs/content/docs/1.getting-started/4.migration.md
+++ b/docs/content/docs/1.getting-started/4.migration.md
@@ -112,9 +112,10 @@ const v3Surround = await queryCollectionItemSurroundings(
 
 Many `ProsePre` components are thin wrappers around the `ProseCode` component. We've consolidated these three components into two components. There is now no difference between `ProsePre` and multi-line code blocks.
 
-1. MDC will now map and parse single backticks ``` as `ProseCode` instead of `ProseCodeInline`.
+1. MDC will now map and parse single backticks \`\`\` as `ProseCode` instead of `ProseCodeInline`.
 2. Block code examples (starting with three backticks) will now be mapped to the `ProsePre` component.
 
 Suggested Changes
-1. Your _current_ `ProseCode` logic should be moved to `ProsePre`
+
+1. Your \_current\_ `ProseCode` logic should be moved to `ProsePre`
 2. Rename your `ProseCodeInline` component to `ProseCode`
