remove studio occurences in src code

--- a/docs/content/blog/v3.md
+++ b/docs/content/blog/v3.md
@@ -68,7 +68,7 @@ export const collections = {
   posts: defineCollection({
     // Specify the type of content in this collection
     type: 'page',
-    // Load every file matching this pattern 
+    // Load every file matching this pattern
     source: 'blog/**/*.md',
     // Define custom schema for this collection
     schema: z.object({
@@ -125,7 +125,7 @@ const { data: posts } = await useAsyncData('blog', () => {
 We've updated the components to include only the essentials:
 
 - [ContentRendered](/docs/components/content-renderer) to render the parsed Markdown to HTML & Vue components
-- [Slot](/docs/components/slot) replaced ContentSlot as we now support unwrapping using a directive, making your Vue components perfectly compatible to be used in both Vue & Markdown
+- [Slot](/docs/components/slot) replaced `ContentSlot` as we now support unwrapping using a directive, making your Vue components perfectly compatible to be used in both Vue & Markdown
 - [Prose Components](/docs/components/prose) are pre-designed components tailored for MDC syntax, with integrated styling for a good appearance.
 
 Here's an example of displaying the content of a Markdown file:
