Update 1.slot.md - Fixed text mistake: use --> name
Fixed text mistake in the named slot description: 'use' --> 'name'.

--- a/docs/content/docs/5.components/1.slot.md
+++ b/docs/content/docs/5.components/1.slot.md
@@ -59,7 +59,7 @@ Now the rendered HTML will be:
 
 ### Named Slots
 
-The `use` prop allows you to bind a slot by its name. This is useful when you want to render a slot that is not the default one.
+The `name` prop allows you to bind a slot by its name. This is useful when you want to render a slot that is not the default one.
 
 Let's improve our `Callout` component to have a `title` slot:
 
