--- a/docs/content/blog/v3.md
+++ b/docs/content/blog/v3.md
@@ -25,6 +25,7 @@ date: 2025-01-07T01:00:00.000Z
 category: Release
 seo:
   title: Announcing Nuxt Content version 3
+draft: true
 ---
 
 # **Announcing Nuxt Content 3.0**
