--- a/docs/content/blog/v3.md
+++ b/docs/content/blog/v3.md
@@ -40,7 +40,7 @@ This switch is transparent to users and Nuxt Content providing a zero config sup
 
 ### Serverless Compatibility
 
-A key challenge with Nuxt Content v2 was the large bundle size required to store all content files. It was an issue when deploying to serverless or edge platforms like [Netlify](), [NuxtHub](https://hub.nuxt.com) or [Vercel](https://vercel.com).
+A key challenge with Nuxt Content v2 was the large bundle size required to store all content files. It was an issue when deploying to serverless or edge platforms like [Netlify](https://netlify.com), [NuxtHub](https://hub.nuxt.com) or [Vercel](https://vercel.com).
 
 To address this, Nuxt Content v3 leverages an SQL database system. This switch is transparent to users. We're providing a zero config support for development mode, [server hosting](/docs/deploy/server) and [static generation](/docs/deploy/static). For [serverless deployments](/docs/deploy/serverless), we support database adaptors (D1, Postgres & LibSQL).
 
@@ -52,11 +52,11 @@ For client-side navigation, the module utilizes a similar approach. When the app
 
 Collections are groups of related content items within your Nuxt Content project. They help organize and manage large datasets more efficiently.
 
-#### **Define collections**
+### **Define collections**
 
 You'll be able to define collections in the [`content.config.ts`](/docs/getting-started/configuration) file which is used by Nuxt Content to configure database structures, utility types, and methods for finding, parsing, and querying content.
 
-#### **Collections schema**
+### **Collections schema**
 
 Schemas enforce consistency within collections and improve TypeScript typings for better integration with Nuxt Content utilities.
 
