--- a/docs/content/docs/8.studio/6.debug.md
+++ b/docs/content/docs/8.studio/6.debug.md
@@ -47,7 +47,7 @@ npx nuxt dev --tunnel
 
 ### Ensure the metadata file has been generated
 
-`__studio.json` file should accessible from `https://your-localtunnel-url/__studio.json`
+`__preview.json` file should accessible from `https://your-localtunnel-url/__preview.json`
 
 ### Copy the tunnel URL and copy it in the self-hosting section of the deployment tab on Studio platform
 
