--- a/docs/content/blog/v3.md
+++ b/docs/content/blog/v3.md
@@ -158,11 +158,11 @@ Note that we decided to remove the document-driven mode to simplify the module u
 
 ## 🖼️ Studio integration
 
-[Studio](https://studio.content.nuxt.com) is a platform to edit your **Nuxt Content** projects. Our versatile editor adapt to `Markdown`, `YAML`, or `JSON` files.
+[Studio](https://nuxt.studio) is a platform to edit your **Nuxt Content** projects. Our versatile editor adapt to `Markdown`, `YAML`, or `JSON` files.
 
 Previously an independent module, the [Studio module](https://github.com/nuxtlabs/studio-module) is now integrated directly into Nuxt Content. Enable Studio is as simple as setting `content.editor: true` in your `nuxt.config.ts` file. This simplification means no extra module is required for Studio, making setup faster.
 
-In addition to this integration, we’ve unified the **Content** and **Studio** documentation and websites into a single comprehensive resource. Only the Studio platform (available once the user is logged) remains as a [standalone site](https://studio.content.nuxt.com).
+In addition to this integration, we’ve unified the **Content** and **Studio** documentation and websites into a single comprehensive resource. Only the Studio platform (available once the user is logged) remains as a [standalone site](https://nuxt.studio).
 
 **We can now take advantage of data structures and collections in Studio**. The Studio platform supports and adapts its behaviour to **collections** and **user-defined schemas**. This enhancement will allow schema-generated forms for both `YAML` and `JSON` files as well as front-matter within Markdown files.
 
