5 changes by Nuxt Studio

--- a/docs/content/docs/8.studio/2.github.md
+++ b/docs/content/docs/8.studio/2.github.md
@@ -1,5 +1,5 @@
 ---
-title: Allow real time synchronization between Studio and GitHub
+title: Real time synchronization between Studio and GitHub
 description: Nuxt Studio is natively synced with GitHub. Install the Nuxt Studio
   GitHub app and enable content publication on GitHub directly from Studio.
 navigation:
@@ -7,7 +7,7 @@ navigation:
 ---
 
 ::tip
-This section explains the syncronization behaviour between Studio and GitHub. However this process is handled directly from the platform and does not require any external action. This page purpose is purely informational.
+This section explains the syncronization behaviour between Studio and GitHub. This process is handled directly from the platform and does not require any external action. This page purpose is purely informational.
 ::
 
 ## Overview
@@ -16,7 +16,7 @@ Nuxt Studio integrates with the [GitHub](https://github.com) API, enabling smoot
 
 ## Installation
 
-To begin, you need to install the [Nuxt Studio GitHub App](https://github.com/apps/nuxt-studio) in your personal account or in the organizations you manage. Installing a GitHub App requires either organization ownership or admin permissions in a repository. If you lack the necessary permissions, the repository owner will need to approve the request.
+During Studio project creation, you'll need to install the [Nuxt Studio GitHub App](https://github.com/apps/nuxt-studio) in your personal account or in the organizations you manage. Installing a GitHub App requires either organization ownership or admin permissions in a repository. If you lack the necessary permissions, the repository owner will need to approve the request.
 
 You can access the installation page from anywhere on the app by clicking on [Install with GitHub](https://github.com/apps/nuxt-studio/installations/new).
 
