--- a/docs/content/docs/8.studio/5.config.md
+++ b/docs/content/docs/8.studio/5.config.md
@@ -15,17 +15,23 @@ When entering the **Config** tab of the editor, you can browse configurations to
 
 The [`app.config.ts`](https://nuxt.com/docs/guide/directory-structure/app-config) file is a configuration file introduced in Nuxt 3. It's a TypeScript file that allows you to configure various aspects of your application settings. Developers can easily turn any website into a configurable experience using this file.
 
-Ensure you have at least an empty file in your app:
+## Customize edition
+
+::prose-note
+Ensure you have at least an empty config file in your app.
 
 ```ts [app.config.ts]
 export default defineAppConfig({})
 ```
-
-## Customize edition
+::
 
 To create a customized editing experience for your `app.config.ts` in Studio, you need to create a `nuxt.schema.ts` file in your project. This schema serves as a representation of your `app.config.ts`.
 
 ### Helpers
+
+::prose-note
+Those helpers are provided by the Nuxt Content `Preview API`.
+::
 
 - The `group` method allows you to customize parent objects.
 - The `field` method allows you to customize inputs (aka leaf).
@@ -54,7 +60,7 @@ export default defineNuxtSchema({
 ```
 
 ::tip
-It is not mandatory to include all app config keys; only those you wish to showcase on the Studio interface need to be added.
+It is not mandatory to include all your app config keys; only those you wish to showcase on the Studio interface need to be added.
 ::
 
 #### Input Types
@@ -99,7 +105,7 @@ export default defineNuxtSchema({
 
 ### Edit on Studio
 
-Once your schema is deployed. Any user can access the **Config** section and play with the generated form.
+Once your schema is deployed. Any user can access the **Data** section and play with the generated form.
 
 Any update in the form will be directly applied to the `app.config.ts` file. You can review those changes on the review page.
 
