4 changes by Nuxt Studio

--- a/docs/content/docs/8.studio/1.setup.md
+++ b/docs/content/docs/8.studio/1.setup.md
@@ -43,7 +43,7 @@ Once the project is created, you can start editing your files with the Studio ed
 
 ## **Enable the Full Editing Experience**
 
-To unlock the complete range of features in Studio, make sure your project URL is properly configured ****in the deployment section.
+To unlock the complete range of features in Studio, make sure your project URL is properly configured in the deployment section.
 
 **This will enable all Studio features including:**
 
