--- a/docs/content/docs/1.getting-started/4.migration.md
+++ b/docs/content/docs/1.getting-started/4.migration.md
@@ -46,6 +46,22 @@ The new API is backed by SQL and content queries happens within a specific colle
 - Document `._path` is now renamed to `.path`, likewise all internal fields with `_` prefix are removed or renamed.
 - `useContentHelpers()` is removed
 
+### Nuxt Studio integration
+
+- The [studio module](https://nuxtlabs/studio-module) has been deprecated and a new generic `Preview API` has been implemented directly into Nuxt Content, you can remove the `@nuxthq/studio` package from your dependancies and from the `nuxt.config.ts` modules. Instead we just need to enable the preview mode in the Nuxt configuration file by binding the Studio API.
+
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  content: {
+    preview: {
+      api: 'https://api.nuxt.studio
+    }
+  },
+})
+```
+
+- In order to keep the [app config file](/docs/studio/config) updatable from Studio we just need to update the helper import of the `nuxt.schema.ts` file from `@nuxthq/studio/theme` to `@nuxt/content/preview`.
+
 ## Implement Document Driven mode in v3
 
 Implementing document driven mode in Content v3 is quite easy. All you need is to create a catch-all page in Nuxt and fetch contents based on route path.
