1 change by Nuxt Studio

--- a/docs/content/docs/8.studio/3.content.md
+++ b/docs/content/docs/8.studio/3.content.md
@@ -26,7 +26,11 @@ Each editor serves its own purpose. Some users are used to code edition, while o
 
 ![edit your website with a visual interface](/docs/studio/visual-markdown-editor.webp)
 
-This editor is heavily inspired by Notion, well known for its intuitive design and flexibility. Much like a standard text editor, this editor is designed to be familiar and easy to use. However, it stands out with its additional features that improve the writing experience:
+This editor is heavily inspired by Notion, well known for its intuitive design and flexibility. Much like a standard text editor, this editor is designed to be familiar and easy to use. However, it stands out with its additional features that improve the writing experience.
+
+::tip{to="/blog/visual-editor"}
+You want to know how we've built this editor and how it works under the hood? Check this blog post.
+::
 
 ### Frontmatter
 
@@ -52,7 +56,9 @@ From the media modal, you can set the [alt attribute](https://www.w3schools.com/
 
 One of this editor standout features is its ability to integrate and customize any complex `Vue` component directly within the editor.
 
-In other terms, a developer can create any kind of visually complex components and editors will be able to use them and focus on the content. An editor can also tweak the component properties, styles, and behavior to fit its specific requirements as long as the developer made it customizable.
+#### Create and integrate your own component
+
+A developer can create any kind of visually complex components and editors will be able to use them and focus on the content. An editor can also play with the component properties, styles, and behaviour to fit its specific requirements as long as the developer made it customisable.
 
 ::steps{level="4"}
 #### Create your component
@@ -113,9 +119,25 @@ All components in the `/components/content` folder are available in the editor. 
   :::
 ::
 
-::tip{to="/blog/visual-editor"}
-You want to know how we've built this editor and how it works under the hood? Check this blog post.
-::
+#### Integrate built-in components from external libraries
+
+By default, you can integrate any component inside a Markdown file and it should work and be editable from Studio but external components **won't be displayed in the components list in Studio and can't be integrated manually by a Studio editor**.
+
+To list this component inside Studio and fetch all its metadata, you need to set it as global in your Nuxt config file.
+
+Here is an example to integrate Button and Icon components from the [Nuxt UI](https://ui.nuxt.com) library:
+
+```ts
+export default defineNuxtConfig({
+  hooks: {
+    'components:extend': (components) => {
+      const globals = components.filter(c => ['UButton', 'UIcon'].includes(c.pascalName))
+
+      globals.forEach(c => c.global = true)
+    }
+  },
+})
+```
 
 ## Form editor (`YAML` and `JSON` files)
 
