1 change by Nuxt Studio

--- a/docs/content/blog/v3.md
+++ b/docs/content/blog/v3.md
@@ -36,13 +36,19 @@ We are thrilled to announce the first stable version of Nuxt 3.0.0 ✨
 
 Nuxt Content v3 moves away from the file based storing in production and leverage an SQL database system. Using a database instead of the file-based approach reduce many I/O operations when querying large datasets.
 
-This switch is transparent to users and Nuxt Content providing a zero config support for development mode, [server hosting](/docs/deploy/server) and [static generation](/docs/deploy/static).
+This switch is transparent to users and Nuxt Content still provides a zero config support for development mode, [server hosting](/docs/deploy/server) and [static generation](/docs/deploy/static).
+
+However, [serverless](/docs/deploy/serverless) is now also handled and SPA performances has been improved.
 
 ### Serverless Compatibility
 
 A key challenge with Nuxt Content v2 was the large bundle size required to store all content files. It was an issue when deploying to serverless or edge platforms like [Netlify](https://netlify.com), [NuxtHub](https://hub.nuxt.com) or [Vercel](https://vercel.com).
 
-To address this, Nuxt Content v3 leverages an SQL database system. This switch is transparent to users. We're providing a zero config support for development mode, [server hosting](/docs/deploy/server) and [static generation](/docs/deploy/static). For [serverless deployments](/docs/deploy/serverless), we support database adaptors (D1, Postgres & LibSQL).
+Because in serverless environments, each user request triggers a fresh instance of your Nuxt server, it starts from scratch each time. This "stateless" nature means you can't store data in server memory or use file-based databases like SQLite. That's why we've implemented database adaptors that persist data independently of your server instances.
+
+::prose-note
+We're manually switching to the appropriate provider (Vercel / Postgres, NuxtHub / D1...) according to the [database type](https://cfec52f9.content-f0q.pages.dev/docs/getting-started/configuration#database) you've set in your config.
+::
 
 ### WASM SQLite in Browser
 
@@ -158,14 +164,28 @@ Note that we decided to remove the document-driven mode to simplify the module u
 
 ## 🖼️ Studio integration
 
-[Studio](https://nuxt.studio) is a platform to edit your **Nuxt Content** projects. Our versatile editor adapt to `Markdown`, `YAML`, or `JSON` files.
+[Studio](/studio) is a platform to edit your **Nuxt Content** projects. With support for  `Markdown`, `YAML`, or `JSON` files, , our editor ensures versatility and ease of use.
 
-Previously an independent module, the [Studio module](https://github.com/nuxtlabs/studio-module) is now integrated directly into Nuxt Content. Enable Studio is as simple as setting `content.editor: true` in your `nuxt.config.ts` file. This simplification means no extra module is required for Studio, making setup faster.
+#### Preview API
+
+Previously an independent module, the [Studio module](https://github.com/nuxtlabs/studio-module) has been updated to be more generic and is now integrated directly into Nuxt Content as a `Preview API`.
+
+Enabling the preview functionality in Studio is easier than ever—simply configure the Studio API as your `Preview API` in your Nuxt Content settings:
+
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  content: {
+    preview: {
+      api: 'https://api.nuxt.studio'
+    }
+  }
+})
+```
+
+This simplification means no extra module is required for Studio, making setup faster. Furthermore, the Preview API is now generic, enabling other providers to deliver great editing experiences with Nuxt Content.
+
+### **Unified Documentation**
 
 In addition to this integration, we’ve unified the **Content** and **Studio** documentation and websites into a single comprehensive resource. Only the Studio platform (available once the user is logged) remains as a [standalone site](https://nuxt.studio).
 
 **We can now take advantage of data structures and collections in Studio**. The Studio platform supports and adapts its behaviour to **collections** and **user-defined schemas**. This enhancement will allow schema-generated forms for both `YAML` and `JSON` files as well as front-matter within Markdown files.
-
-::prose-tip{to="/docs/studio/content"}
-Learn more about content edition in Studio.
-::
