1 change by Nuxt Studio

--- a/docs/content/blog/v3.md
+++ b/docs/content/blog/v3.md
@@ -1,7 +1,8 @@
 ---
 title: Nuxt Content v3
 description: "Content version 3 is out - introducing SQL based storage,
-  collections, Studio integration and tons of performance improvements. "
+  collections, preview API for a better Studio integration and tons of
+  performance improvements. "
 image:
   src: /blog/nuxt-content-v3.png
   alt: Version 3 of Nuxt Content
@@ -38,7 +39,7 @@ Nuxt Content v3 moves away from the file based storing in production and leverag
 
 This switch is transparent to users and Nuxt Content still provides a zero config support for development mode, [server hosting](/docs/deploy/server) and [static generation](/docs/deploy/static).
 
-However, [serverless](/docs/deploy/serverless) is now also handled and SPA performances has been improved.
+Furthermore, [serverless](/docs/deploy/serverless) is now also handled and SPA performances has been improved.
 
 ### Serverless Compatibility
 
@@ -94,7 +95,7 @@ export const collections = {
 ```
 
 ::prose-tip{to="/docs/collections/define"}
-Learn more about collections in the documenation.
+Learn more about collections in the documentation.
 ::
 
 ## 🔧 Simplified Vue Utils
@@ -164,9 +165,9 @@ Note that we decided to remove the document-driven mode to simplify the module u
 
 ## 🖼️ Studio integration
 
-[Studio](/studio) is a platform to edit your **Nuxt Content** projects. With support for  `Markdown`, `YAML`, or `JSON` files, , our editor ensures versatility and ease of use.
+[Studio](/studio) is a platform to edit your **Nuxt Content** projects. With support for  `Markdown`, `YAML`, or `JSON` files, our editor ensures versatility and ease of use.
 
-#### Preview API
+### Preview API
 
 Previously an independent module, the [Studio module](https://github.com/nuxtlabs/studio-module) has been updated to be more generic and is now integrated directly into Nuxt Content as a `Preview API`.
 
