docs: minor updates

--- a/docs/content/blog/v3.md
+++ b/docs/content/blog/v3.md
@@ -33,19 +33,19 @@ draft: true
 
 We are thrilled to announce the first stable version of Nuxt 3.0.0 ✨
 
-## 🚀 Performance improvements
+## 🚀 Performance Improvements
 
-Nuxt Content v3 moves away from the file based storing in production and leverage an SQL database system. Using a database instead of the file-based approach reduce many I/O operations when querying large datasets.
+Nuxt Content v3 moves away from a file-based storage approach to an SQL database system. Using a database instead of the file-based storage reduces many I/O operations when querying large datasets.
 
 This switch is transparent to users and Nuxt Content still provides a zero config support for development mode, [server hosting](/docs/deploy/server) and [static generation](/docs/deploy/static).
 
-Furthermore, [serverless](/docs/deploy/serverless) is now also handled and SPA performances has been improved.
+Furthermore, [serverless](/docs/deploy/serverless) hosting is now supported and client-side navigation performance has been improved.
 
 ### Serverless Compatibility
 
 A key challenge with Nuxt Content v2 was the large bundle size required to store all content files. It was an issue when deploying to serverless or edge platforms like [Netlify](https://netlify.com), [NuxtHub](https://hub.nuxt.com) or [Vercel](https://vercel.com).
 
-Because in serverless environments, each user request triggers a fresh instance of your Nuxt server, it starts from scratch each time. This "stateless" nature means you can't store data in server memory or use file-based databases like SQLite. That's why we've implemented database adaptors that persist data independently of your server instances.
+In serverless environments, each user request triggers a fresh instance of your Nuxt server, it starts from scratch each time. This "stateless" nature means you can't store data in server memory or use file-based databases like SQLite. That's why we've implemented database adaptors that persist data independently of your server instances.
 
 ::prose-note
 We're manually switching to the appropriate provider (Vercel / Postgres, NuxtHub / D1...) according to the [database type](https://cfec52f9.content-f0q.pages.dev/docs/getting-started/configuration#database) you've set in your config.
@@ -53,17 +53,17 @@ We're manually switching to the appropriate provider (Vercel / Postgres, NuxtHub
 
 ### WASM SQLite in Browser
 
-For client-side navigation, the module utilizes a similar approach. When the application executes the first query for content, it downloads the generated dump from the server and initializes a local SQLite database within the browser. From that point onward, all queries are executed locally without needing to call the server, significantly improving the responsiveness of the application and providing a seamless user experience.
+For client-side navigation, the module uses a similar approach. When the application executes the first content query, it downloads the generated dump from the server and initializes a local SQLite database within the browser. From that point onward, all queries are executed locally without needing to call the server: significantly improving the responsiveness of the application and providing a seamless user experience.
 
-## 🗄️ Collections
+## 🗄️ Content Collections
 
 Collections are groups of related content items within your Nuxt Content project. They help organize and manage large datasets more efficiently.
 
-### **Define collections**
+### **Define Collections**
 
-You'll be able to define collections in the [`content.config.ts`](/docs/getting-started/configuration) file which is used by Nuxt Content to configure database structures, utility types, and methods for finding, parsing, and querying content.
+You can now define collections in the [`content.config.ts`](/docs/getting-started/configuration) file to configure the database structure, utility types, and methods for finding, parsing, and querying content.
 
-### **Collections schema**
+### **Collections Schema**
 
 Schemas enforce consistency within collections and improve TypeScript typings for better integration with Nuxt Content utilities.
 
@@ -104,8 +104,8 @@ We simplified the utils to now expose:
 
 - [queryCollection](/docs/utils/query-collection) to fetch your collections with our powerful query builder
 - [queryCollectionNavigation](/docs/utils/query-collection-navigation) to fetch the generated navigation for a specific collection
-- [queryCollectionItemSurroundings](/docs/utils/query-collection-item-surroundings) composable looks for sibling contents of an specific path.
-- [queryCollectionSearchSections](/docs/utils/query-collection-search-sections) composable generates searchable sections from a collection for enhanced content discovery.
+- [queryCollectionItemSurroundings](/docs/utils/query-collection-item-surroundings) to fetch sibling content for a specific path
+- [queryCollectionSearchSections](/docs/utils/query-collection-search-sections) to fetch searchable sections from a collection for enhanced content discovery
 
 These four utils allow your to efficiently fetch and query your content within your Vue pages and components:
 
@@ -134,7 +134,7 @@ We've updated the components to include only the essentials:
 
 - [ContentRendered](/docs/components/content-renderer) to render the parsed Markdown to HTML & Vue components
 - [Slot](/docs/components/slot) replaced `ContentSlot` as we now support unwrapping using a directive, making your Vue components perfectly compatible to be used in both Vue & Markdown
-- [Prose Components](/docs/components/prose) are pre-designed components tailored for MDC syntax, with integrated styling for a good appearance.
+- [Prose Components](/docs/components/prose) are pre-designed components tailored for MDC syntax, with integrated styling for a good appearance
 
 Here's an example of displaying the content of a Markdown file:
 
@@ -160,12 +160,12 @@ The new collections system provides automatic TypeScript types for all your data
 Migration should be as easy as possible, this is why we wrote the [migration guide](/docs/getting-started/migration).
 
 ::prose-note
-Note that we decided to remove the document-driven mode to simplify the module usage.
+Note that we've decided to remove the document-driven mode to simplify the module usage.
 ::
 
-## 🖼️ Studio integration
+## 🖼️ Studio Integration
 
-[Studio](/studio) is a platform to edit your **Nuxt Content** projects. With support for  `Markdown`, `YAML`, or `JSON` files, our editor ensures versatility and ease of use.
+[Nuxt Studio](/studio) is a platform to visually edit your **Nuxt Content** projects in production. With support for  `Markdown`, `YAML`, or `JSON` files, our editor ensures versatility and ease of use.
 
 ### Preview API
 
@@ -183,10 +183,10 @@ export default defineNuxtConfig({
 })
 ```
 
-This simplification means no extra module is required for Studio, making setup faster. Furthermore, the Preview API is now generic, enabling other providers to deliver great editing experiences with Nuxt Content.
+This simplification means no extra module is required for Studio, making setup faster. Furthermore, the Preview API is now generic, enabling other providers to deliver great editing experiences on top of Nuxt Content.
 
 ### **Unified Documentation**
 
-In addition to this integration, we’ve unified the **Content** and **Studio** documentation and websites into a single comprehensive resource. Only the Studio platform (available once the user is logged) remains as a [standalone site](https://nuxt.studio).
+In addition to this integration, we’ve unified the **Content** and **Studio** documentation and websites into a single comprehensive resource. Only the Studio platform (available once the user is logged-in) remains as a [standalone site](https://nuxt.studio).
 
 **We can now take advantage of data structures and collections in Studio**. The Studio platform supports and adapts its behaviour to **collections** and **user-defined schemas**. This enhancement will allow schema-generated forms for both `YAML` and `JSON` files as well as front-matter within Markdown files.
