docs: update link to content v3

--- a/docs/content/1.get-started/5.from-v1.md
+++ b/docs/content/1.get-started/5.from-v1.md
@@ -1,7 +1,12 @@
 ---
 title: 'Migration'
-description: 'Learn how to upgrade from Nuxt Content V1 to Nuxt Content V2 with Nuxt 3.'
+description: 'Learn how to upgrade from Nuxt Content V1 to Nuxt Content V2 or V3 with Nuxt 3.'
 ---
+
+## Content V3 Documentation
+
+:u-button{to="https://content.nuxt.com"}[Read V3 Documentation]
+
 
 ## Content V1 Documentation
 
