--- a/docs/content/docs/1.getting-started/2.installation.md
+++ b/docs/content/docs/1.getting-started/2.installation.md
@@ -9,19 +9,19 @@ Choose your preferred package manager to install Nuxt Content v3:
 
 ::code-group
 ```bash [pnpm]
-pnpm add @nuxt/content@next
+pnpm add @nuxt/content
 ```
 
 ```bash [yarn]
-yarn add @nuxt/content@next
+yarn add @nuxt/content
 ```
 
 ```bash [npm]
-npm install @nuxt/content@next
+npm install @nuxt/content
 ```
 
 ```bash [bun]
-bun add @nuxt/content@next
+bun add @nuxt/content
 ```
 ::
 
