docs(release): add note about new storage system

--- a/docs/content/blog/v3.md
+++ b/docs/content/blog/v3.md
@@ -36,6 +36,10 @@ We are thrilled to announce the first stable version of Nuxt 3.0.0 ✨
 
 Nuxt Content v3 moves away from a file-based storage approach to an SQL database system. Using a database instead of the file-based storage reduces many I/O operations when querying large datasets.
 
+::prose-note
+The new database system enhances the way your data files are stored and structured, ensuring better performance and scalability. This update is entirely behind the scenes and does not affect the file types you can use in Content (`yml`, `json`, and `markdown` ).
+::
+
 This switch is transparent to users and Nuxt Content still provides a zero config support for development mode, [server hosting](/docs/deploy/server) and [static generation](/docs/deploy/static).
 
 Furthermore, [serverless](/docs/deploy/serverless) hosting is now supported and client-side navigation performance has been improved.
