--- a/docs/content/docs/1.getting-started/1.index.md
+++ b/docs/content/docs/1.getting-started/1.index.md
@@ -27,6 +27,10 @@ A significant challenge in v2 was the large bundle size needed for storing files
 
 V3 addresses this by transitioning to SQL-based storage in production. This switch requires zero configuration, supporting development mode, static generation, server hosting, serverless and edge deployments.
 
+::prose-note
+The new database system enhances the way your data files are stored and structured, ensuring better performance and scalability. This update is entirely behind the scenes and does not affect the file types you can use in Content (`yml`, `json`, and `markdown` ).
+::
+
 Benefits include:
 
 - **Optimized Queries**: SQL storage enables ultra-fast data retrieval
