docs(blog): typo in v3 release

--- a/docs/content/blog/v3.md
+++ b/docs/content/blog/v3.md
@@ -30,7 +30,7 @@ seo:
 
 # **Announcing Nuxt Content 3.0**
 
-We are thrilled to announce the first stable version of Nuxt 3.0.0 ✨
+We are thrilled to announce the first stable version of Nuxt Content 3.0.0 ✨
 
 ## 🚀 Performance Improvements
 
