Update IN filter operator in docs

--- a/docs/content/docs/4.utils/1.query-collection.md
+++ b/docs/content/docs/4.utils/1.query-collection.md
@@ -85,7 +85,7 @@ Add a condition to the query to filter results based on a specific field.
     - `'>'`: Greater than
     - `'<'`: Less than
     - `'<>'`: Not equal to
-    - `'in'`: In a list of values
+    - `'IN'`: In a list of values
     - `'BETWEEN'`: Between two values
     - `'NOT BETWEEN'`: Not between two values
     - `'IS NULL'`: Is null
