--- a/docs/content/docs/1.getting-started/4.migration.md
+++ b/docs/content/docs/1.getting-started/4.migration.md
@@ -37,7 +37,7 @@ The new API is backed by SQL and content queries happens within a specific colle
 
 ### Types
 
-- `import type { NavItem } from '@nuxt/content/dist/runtime/types'` is remplaced with `import type { ContentNavigationItem } from '@nuxt/content'`
+- `import type { NavItem } from '@nuxt/content/dist/runtime/types'` is replaced with `import type { ContentNavigationItem } from '@nuxt/content'`
 
 ### General
 
