fix: convert boolean value to number in query condition (#2927)

--- a/docs/content/docs/4.utils/2.query-collection-navigation.md
+++ b/docs/content/docs/4.utils/2.query-collection-navigation.md
@@ -30,7 +30,7 @@ The function returns a chainable promise that allows you to add additional query
 <script setup lang="ts">
 const { data } = await useAsyncData('navigation', () => {
   return queryCollectionNavigation('docs')
-    .where('published', '==', true)
+    .where('published', '=', true)
     .order('date', 'DESC')
 })
 </script>
@@ -81,8 +81,8 @@ Example with additional query conditions and extra fields:
 <script setup lang="ts">
 const { data } = await useAsyncData('navigation', () => {
   return queryCollectionNavigation('docs', ['description', 'badge'])
-    .where('draft', '==', false)
-    .where('partial', '==', false)
+    .where('draft', '=', false)
+    .where('partial', '=', false)
     .order('title', 'ASC')
 })
 </script>
