--- a/docs/content/docs/4.utils/3.query-collection-item-surroundings.md
+++ b/docs/content/docs/4.utils/3.query-collection-item-surroundings.md
@@ -31,7 +31,7 @@ The function returns a chainable promise that allows you to add additional query
 <script setup lang="ts">
 const { data } = await useAsyncData('surround', () => {
   return queryCollectionItemSurroundings('docs', '/foo')
-    .where('published', '==', true)
+    .where('published', '=', true)
     .order('date', 'DESC')
 })
 </script>
@@ -96,8 +96,8 @@ const { data } = await useAsyncData('surround', () => {
     after: 1,
     fields: ['badge', 'description']
   })
-    .where('_draft', '==', false)
-    .where('_partial', '==', false)
+    .where('_draft', '=', false)
+    .where('_partial', '=', false)
     .order('date', 'DESC')
 })
 </script>
