docs: update plugin options example
reported in #3026

--- a/docs/content/docs/1.getting-started/3.configuration.md
+++ b/docs/content/docs/1.getting-started/3.configuration.md
@@ -83,7 +83,9 @@ export default defineNuxtConfig({
         remarkPlugins: {
           // Override remark-emoji options
           'remark-emoji': {
-            emoticon: true
+            options: {
+              emoticon: true
+            }
           },
           // Disable remark-gfm
           'remark-gfm': false,
