docs: add example with cwd property

--- a/docs/content/docs/2.collections/3.sources.md
+++ b/docs/content/docs/2.collections/3.sources.md
@@ -50,6 +50,17 @@ It represents the path prefix (base URL) of the corresponding page on the websit
 
 Root directory for content matching.
 
+**Example:**
+
+If you want to include files from a folder outside the content directory, set the absolute path of that folder to the `cwd` property.
+
+```ts
+source: {
+  cwd: path.resolve('packages/my-pkg/docs'),
+  include: '**/*.md',
+}
+```
+
 ### `repository`
 
 External source representing a remote git repository URL (e.g., <https://github.com/nuxt/content>)
