--- a/docs/content/1.get-started/1.installation.md
+++ b/docs/content/1.get-started/1.installation.md
@@ -3,55 +3,6 @@ title: Installation
 description: Get started with Nuxt Content by creating a new project or adding it to an existing Nuxt application.
 ---
 
-## Play online
-
-You can start playing with Nuxt Content in your browser using our online sandboxes:
-
-:u-button{icon="i-simple-icons-stackblitz" to="https://stackblitz.com/github/nuxt/starter/tree/content" target="_blank" label="Play on StackBlitz" .mr-4}
-:u-button{icon="i-simple-icons-codesandbox" to="https://codesandbox.io/s/github/nuxt/starter/tree/content" label="Play on CodeSandbox" target="_blank" class="mt-2 sm:mt-0"}
-
-Or open the [embedded playground](/playground).
-
-## New Project
-
-::callout
-Before getting started, please **make sure to have installed the recommended setup**:
-* Follow the [Nuxt 3 Prerequisites](https://nuxt.com/docs/getting-started/installation#prerequisites)
-* Download the [VS Code **MDC Extension**](https://marketplace.visualstudio.com/items?itemName=Nuxt.mdc)
-::
-
-1. You can start a fresh Nuxt Content project with:
-
-```bash [Terminal]
-npx nuxi@latest init content-app -t content
-```
-
-It will ask you with which package manager you want to install the dependencies.
-
-2. Move into the `content-app` folder and start the development server:
-
-::code-group
-```bash [pnpm]
-pnpm run dev
-```
-
-```bash [yarn]
-yarn dev
-```
-
-```bash [npm]
-npm run dev
-```
-::
-
-::callout
-✨ Well done! A browser window should automatically open for http://localhost:3000
-::
-
-::callout
-👉 Next step is to head over the [Writing section](/usage/content-directory) to learn how to use Nuxt Content.
-::
-
 ## Add to a project
 
 ::callout{type="warning"}
@@ -60,7 +11,7 @@ npm run dev
 
 You can add Nuxt Content at anytime during your Nuxt project development by installing the `@nuxt/content` module:
 ```bash
-npx nuxi@latest module add content
+npx nuxi@latest module add @nuxt/content@2
 ```
 
 Then, add `@nuxt/content` to the `modules` section of `nuxt.config.ts`:
