docs(collections): source prefix starts by `/`

--- a/docs/content/docs/2.collections/3.sources.md
+++ b/docs/content/docs/2.collections/3.sources.md
@@ -46,6 +46,10 @@ This configuration only applied for **page** type with 1-to-1 relationship betwe
 
 It represents the path prefix (base URL) of the corresponding page on the website.
 
+::prose-warning
+The `prefix` must start by a leading `/`.
+::
+
 ### `cwd`
 
 Root directory for content matching.
