docs(markdown): tip about defining `excerpt` field in schema
close #3041

--- a/docs/content/docs/3.files/1.markdown.md
+++ b/docs/content/docs/3.files/1.markdown.md
@@ -522,6 +522,23 @@ Description property will contain the excerpt content unless defined within the 
 
 If there is no `<!--more-->` divider in the text then excerpt is undefined.
 
+::tip
+You should define the `excerpt` field in the collection schema if you want to use the excerpt feature.
+```ts [content.config.ts]
+const content = defineCollection({
+  type: 'page',
+  source: '**',
+  schema: z.object({
+    excerpt: z.object({
+      type: z.string(),
+      children: z.any(),
+    }),
+  }),
+})
+```
+Read more about the [collection schema](/docs/collections/define#collection-schema).
+::
+
 Example variables will be injected into the document:
 
 ```json
