feat(module): extend content transformers

--- a/docs/content/docs/1.getting-started/3.configuration.md
+++ b/docs/content/docs/1.getting-started/3.configuration.md
@@ -239,19 +239,53 @@ export default defineNuxtConfig({
 
 Read more about adding languages in the [Shiki documentation](https://github.com/shikijs/shiki/blob/main/docs/languages.md#adding-grammar).
 
-## `pathMeta`
+### `pathMeta`
 
 Content module uses files path to generate the slug, default title and content order, you can customize this behavior with `pathMeta` option.
 
-### `pathMeta.forceLeadingSlash`
+#### `pathMeta.forceLeadingSlash`
 
 If set to `true`, the path will be prefixed with a leading slash. Default value is `true`.
 
-### `pathMeta.slugifyOptions`
+#### `pathMeta.slugifyOptions`
 
 Content module uses [slugify](https://github.com/simov/slugify) to generate the slug, you can customize the behavior of slugify with this option.
 
 Checkout [slugify options](https://github.com/simov/slugify#options) for more information.
+
+### `transformers`
+
+Nuxt Content has specific transformers for each content type to parse the raw content and prepare it for querying and rendering. Using this option you can define custom transformers to support new content types or improve functionalities of supported content types.
+
+::code-group
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  content: {
+    build: {
+      transformers: [
+        '~/transformers/title-suffix',
+      ],
+    },
+  },
+})
+```
+
+```ts [~/transformers/title-suffix.ts]
+import { defineTransformer } from '@nuxt/content'
+
+export default defineTransformer({
+  name: 'title-suffix',
+  extensions: ['.md'],
+  transform(file) {
+    return {
+      ...file,
+      title: file.title + ' (suffix)',
+    }
+  },
+})
+```
+
+::
 
 ## `database`
 
