docs: document server utils

--- a/docs/content/docs/4.utils/1.query-collection.md
+++ b/docs/content/docs/4.utils/1.query-collection.md
@@ -8,9 +8,9 @@ description: The queryCollection composable provides methods for querying and
 
 Use the auto-imported `queryCollection` to find contents inside a collection. Here we assume that you have defined `docs` collection inside `content.config.ts`.
 
-::note
+
 If you have not defined any collection, check [How to define a collection](/docs/collections/define#defining-collections).
-::
+
 
 ```vue [pages/[...slug\\].vue]
 <script>
@@ -20,6 +20,10 @@ const { data: page } = await useAsyncData(route.path, () => {
 })
 </script>
 ```
+
+::tip
+The `queryCollection` utility is available in both Vue and Nitro. Checkout [Server Usage](#server-usage) for more details on how to use it on the server side.
+::
 
 ## API
 
@@ -238,3 +242,26 @@ const { data: docs } = await useAsyncData('documents-list', () => {
   </NuxtLink>
 </template>
 ```
+
+## Server Usage
+
+Nuxt Content provides a similar utility to query collections on the server side. The only difference is that you need to pass `event` as the first argument to the `queryCollection` function.
+
+```ts [server/api/[slug\\].ts]
+export default eventHandler(async (event) => {
+  const { slug } = getRouterParams(event)
+  const page = await queryCollection(event, 'docs').path(slug).first()
+  return page
+})
+```
+
+:::note
+Make sure to create `server/tsconfig.json` file with the following content to avoid type error.
+
+```json
+{
+  "extends": "../.nuxt/tsconfig.server.json"
+}
+```
+:::
+
