--- a/docs/content/docs/4.utils/2.query-collection-navigation.md
+++ b/docs/content/docs/4.utils/2.query-collection-navigation.md
@@ -36,6 +36,10 @@ const { data } = await useAsyncData('navigation', () => {
 </script>
 ```
 
+::tip
+The `queryCollectionNavigation` utility is available in both Vue and Nitro. Checkout [Server Usage](#server-usage) for more details on how to use it on the server side.
+::
+
 ## API
 
 ### `queryCollectionNavigation(collection: CollectionName, extraField: keyof Collection)`
@@ -101,3 +105,26 @@ const { data } = await useAsyncData('navigation', () => {
   </nav>
 </template>
 ```
+
+
+## Server Usage
+
+Nuxt Content provides a similar utility to query collections on the server side. The only difference is that you need to pass `event` as the first argument to the `queryCollectionNavigation` function.
+
+```ts [server/api/navigation.ts]
+export default eventHandler(async (event) => {
+  const navigation = await queryCollectionNavigation(event, 'docs')
+  return navigation
+})
+```
+
+:::note
+Make sure to create `server/tsconfig.json` file with the following content to avoid type error.
+
+```json
+{
+  "extends": "../.nuxt/tsconfig.server.json"
+}
+```
+:::
+
