--- a/docs/content/docs/4.utils/3.query-collection-item-surroundings.md
+++ b/docs/content/docs/4.utils/3.query-collection-item-surroundings.md
@@ -37,6 +37,11 @@ const { data } = await useAsyncData('surround', () => {
 </script>
 ```
 
+::tip
+The `queryCollectionItemSurroundings` utility is available in both Vue and Nitro. Checkout [Server Usage](#server-usage) for more details on how to use it on the server side.
+::
+
+
 ## API
 
 ### `queryCollectionItemSurroundings(collection: CollectionName, path: string, opts?: SurroundOptions)`
@@ -102,3 +107,27 @@ const { data } = await useAsyncData('surround', () => {
 })
 </script>
 ```
+
+
+
+## Server Usage
+
+Nuxt Content provides a similar utility to query collections on the server side. The only difference is that you need to pass `event` as the first argument to the `queryCollectionItemSurroundings` function.
+
+```ts [server/api/surroundings.ts]
+export default eventHandler(async (event) => {
+  const surroundings = await queryCollectionItemSurroundings(event, 'docs', '/foo')
+  return surroundings
+})
+```
+
+:::note
+Make sure to create `server/tsconfig.json` file with the following content to avoid type error.
+
+```json
+{
+  "extends": "../.nuxt/tsconfig.server.json"
+}
+```
+:::
+
