--- a/docs/content/docs/4.utils/4.query-collection-search-sections.md
+++ b/docs/content/docs/4.utils/4.query-collection-search-sections.md
@@ -7,7 +7,14 @@ description: The queryCollectionSearchSections composable generates searchable
 ## Type
 
 ```ts
-function queryCollectionSearchSections(collection: keyof Collections, opts?: { ignoredTags: string[] }): Promise<Section[]>
+function queryCollectionSearchSections(collection: keyof Collections, opts?: { ignoredTags: string[] }): ChainablePromise<T, Section[]>
+
+interface ChainablePromise<T extends keyof PageCollections, R> extends Promise<R> {
+  where(field: keyof PageCollections[T] | string, operator: SQLOperator, value?: unknown): ChainablePromise<T, R>
+  andWhere(groupFactory: QueryGroupFunction<PageCollections[T]>): ChainablePromise<T, R>
+  orWhere(groupFactory: QueryGroupFunction<PageCollections[T]>): ChainablePromise<T, R>
+  order(field: keyof PageCollections[T], direction: 'ASC' | 'DESC'): ChainablePromise<T, R>
+}
 ```
 
 ## Usage
@@ -21,6 +28,11 @@ const { data: sections } = await useAsyncData('search-sections', () => {
 })
 </script>
 ```
+
+::tip
+The `queryCollectionSearchSections` utility is available in both Vue and Nitro. Checkout [Server Usage](#server-usage) for more details on how to use it on the server side.
+::
+
 
 ## API
 
@@ -52,3 +64,25 @@ const { data: surround } = await useAsyncData('foo-surround', () => {
 })
 </script>
 ```
+
+## Server Usage
+
+Nuxt Content provides a similar utility to query collections on the server side. The only difference is that you need to pass `event` as the first argument to the `queryCollectionSearchSections` function.
+
+```ts [server/api/search-sections.ts]
+export default eventHandler(async (event) => {
+  const sections = await queryCollectionSearchSections(event, 'docs')
+  return sections
+})
+```
+
+:::note
+Make sure to create `server/tsconfig.json` file with the following content to avoid type error.
+
+```json
+{
+  "extends": "../.nuxt/tsconfig.server.json"
+}
+```
+:::
+
