docs: use filename for sqlite option

--- a/docs/content/docs/1.getting-started/3.configuration.md
+++ b/docs/content/docs/1.getting-started/3.configuration.md
@@ -302,7 +302,7 @@ export default defineNuxtConfig({
   content: {
     database: {
       type: 'sqlite',
-      binding: 'SQLITE_DB_LOCATION'
+      filename: 'SQLITE_DB_LOCATION'
     }
   }
 })
