📝 add tip for AWS Lambda deployments

--- a/docs/content/docs/6.deploy/2.serverless.md
+++ b/docs/content/docs/6.deploy/2.serverless.md
@@ -99,6 +99,20 @@ The generated output will be compatible with the selected platform.
 The linked database will be loaded on the server side when booting the server. In the browser, a [WASM SQLite](/docs/advanced/database#wasm-sqlite-in-browser) database will be loaded for client-side navigation and actions.
 ::
 
+::tip
+If you wish to deploy to AWS Lambda, you need to make sure your sqlite file is in `/tmp` since this is the only writeable folder
+
+```ts
+export default defineNuxtConfig({
+  modules: ['@nuxt/content'],
+  content: {
+    database: {
+      type: 'sqlite',
+      filename: '/tmp/contents.sqlite',
+    },
+```
+::
+
 ### 3. Optimize with pre-rendering
 
 As each request trigger a fresh instance of your Nuxt server, the performance of your serverless application will be impacted if you don't pre-render some pages.
